@@ -34,6 +34,7 @@ changes
 - <import defaults="true" /> is not necessary any longer: defaults are imported automatically, 
   they are only left out when using <setup ... defaultImports="false"> in the root element
 - Renamed SimpleConverter to UnsafeConverter and SimpleGenerator to UnsafeGenerator
+- Replaced global <property> with <setting>
 
 
 enhancements
